# cliengine-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/cliengine/: Defines.hpp  Engine.hpp  Parser.hpp
src/: Engine.cpp  Parser.cpp
